cmake_minimum_required(VERSION 3.20 FATAL_ERROR)
project(periodic_heat)
set(CMAKE_CXX_STANDARD 17)
find_package(VTK COMPONENTS IOImage IOXML)
find_package(PkgConfig)
pkg_search_module(FFTW fftw3 IMPORTED_TARGET)
add_executable(solver_sine src/solver_sine.cc)
include_directories(PkgConfig::FFTW)
target_link_libraries(solver_sine PRIVATE ${VTK_LIBRARIES} PkgConfig::FFTW)
vtk_module_autoinit(TARGETS solver_sine MODULES ${VTK_LIBRARIES})
