cmake_minimum_required(VERSION 3.20)
project(periodic_heat)
set(CMAKE_CXX_STANDARD 17)
set(CMAKE_BUILD_TYPE Release)
set(CMAKE_CXX_FLAGS_RELEASE "-O3")
find_package(VTK COMPONENTS IOImage IOXML)
find_package(PkgConfig)
pkg_search_module(FFTW fftw3 IMPORTED_TARGET)
add_executable(solver_sine src/solver_sine.cc)
add_executable(solver_step src/solver_step.cc)
include_directories(PkgConfig::FFTW)
target_link_libraries(solver_sine ${VTK_LIBRARIES} PkgConfig::FFTW)
target_link_libraries(solver_step ${VTK_LIBRARIES} PkgConfig::FFTW)
vtk_module_autoinit(TARGETS solver_sine solver_step MODULES ${VTK_LIBRARIES})
